objects/Partner_Tier_Discount_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Architecture_Workshop_Margin__c</fullName>
        <label>Architecture Workshop Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Margin__c</fullName>
        <label>Deal Reg Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Margin__c</fullName>
        <label>Fulfillment Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POV_Margin__c</fullName>
        <label>POV Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Partner Tier Discount Matrix</label>
</CustomObject>